# bokken

./: .gitignore  CMakeLists.txt  Makefile  README.md  mingw-w64.cmake
examples/neon_katana/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  project.bokken  tsconfig.json
examples/neon_katana/darwin/: main.cpp
examples/neon_katana/linux/: main.cpp
examples/neon_katana/src/: constants.ts  index.ts  index.tsx
examples/neon_katana/src/core/: Bounds.ts  Game.ts  GameState.ts
examples/neon_katana/src/entities/: Level.ts  Player.ts
examples/neon_katana/src/physics/: PhysicsUtils.ts
examples/neon_katana/src/physics/scenes/: CollisionScene.tsx  FluidScene.tsx  GravityScene.tsx  OrbitScene.tsx  SpringScene.tsx
examples/neon_katana/src/userInterface/: HeadsUpDisplay.tsx  MainMenuScene.tsx  PlayingScene.ts
examples/neon_katana/types/: audio.d.ts  canvas.d.ts  gameObject.d.ts  index.d.ts  input.d.ts  log.d.ts  renderer.d.ts  scene.d.ts  window.d.ts
examples/neon_katana/windows/: main.cpp
include/: Bokken.hpp
src/: AssetPack.cpp  AssetPack.hpp  Bokken.cpp  Bokken.hpp  Configuration.hpp  Loop.cpp  Loop.hpp
src/audio/: Channel.hpp  CommandQueue.hpp  ListenerState.hpp  Mixer.cpp  Mixer.hpp  Signal.hpp  Sound.cpp  Sound.hpp  Voice.hpp
src/audio/effects/: Base.hpp  Compressor.hpp  Delay.hpp  Distortion.hpp  Gain.hpp  HighPass.hpp  LowPass.hpp  Reverb.hpp
src/canvas/: Align.hpp  FlexDirection.hpp  Node.hpp  Overflow.hpp  Position.hpp  Rect.hpp  SimpleStyleSheet.hpp  Timing.hpp
src/canvas/components/: Label.cpp  Label.hpp  View.cpp  View.hpp
src/game_object/: Animation2D.cpp  Animation2D.hpp  Base.hpp  Behaviour.cpp  Behaviour.hpp  Camera2D.hpp  Component.hpp  Distortion2D.cpp  Distortion2D.hpp  Mesh.hpp  Mesh2D.hpp  ParticleEmitter2D.cpp  ParticleEmitter2D.hpp  Rigidbody.hpp  Rigidbody2D.hpp  Shape2D.hpp  Sprite2D.hpp  Transform.hpp  Transform2D.hpp
src/renderer/: Base.cpp  Base.hpp  FrameContext.hpp  GlyphCache.cpp  GlyphCache.hpp  Pipeline.cpp  Pipeline.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  Shader.hpp  SpriteBatcher.cpp  SpriteBatcher.hpp  Stage.hpp  Texture2D.cpp  Texture2D.hpp  TextureCache.cpp  TextureCache.hpp
src/renderer/gl/: GL.cpp  GL.hpp
src/renderer/stages/: BloomStage.cpp  BloomStage.hpp  ColorGradeStage.cpp  ColorGradeStage.hpp  CompositeStage.cpp  CompositeStage.hpp  DistortionStage.cpp  DistortionStage.hpp  FullscreenPass.cpp  FullscreenPass.hpp  SpriteStage.cpp  SpriteStage.hpp
src/scripting/: Engine.cpp  Engine.hpp
src/scripting/modules/: Audio.cpp  Audio.hpp  Base.hpp  Canvas.cpp  Canvas.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Log.hpp  Renderer.cpp  Renderer.hpp  Window.hpp
tools/compiler/: main.cpp
tools/packer/: main.cpp
